--- a/bulldogbrain/templates/layout.html
+++ b/bulldogbrain/templates/layout.html
@@ -19,11 +19,9 @@
         <title>C$50 Finance: {% block title %}{% endblock %}</title> -->
 
         <!-- Allows for the usage of bootstrap -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link href="styles.css" rel="stylesheet">
-        <title>My Webpage</title>
     </head>
 
     <body>
@@ -31,26 +29,18 @@
       <nav class="bg-light border navbar navbar-expand-md navbar-light justify-content-center">
           <div class="collapse navbar-collapse" id="navbar">
               {% if session["user_id"] %}
-              <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                  <li class="breadcrumb-item active" aria-current="page">Home</li>
-                  <li class="breadcrumb-item"><a href="https://jorgetorres2287-code50-112740527-gjwxvxq5xrqcvw64-8080.preview.app.github.dev/coolJorge.html">Cool Jorge</a></li>
-                  <li class="breadcrumb-item"><a href="https://jorgetorres2287-code50-112740527-gjwxvxq5xrqcvw64-8080.preview.app.github.dev/top5movies.html">Top 5 Movies</a></li>
-                  <li class="breadcrumb-item"><a href="https://jorgetorres2287-code50-112740527-gjwxvxq5xrqcvw64-8080.preview.app.github.dev/top5foods.html">Top 5 Foods</a></li>
-                  <li class="breadcrumb-item"><a href="https://jorgetorres2287-code50-112740527-gjwxvxq5xrqcvw64-8080.preview.app.github.dev/siblingsheight.html">Sibling Rankings</a></li>
-                </ol>
-                </nav>
-
-
                   <ul class="navbar-nav me-auto mt-2">
-                      <li class="nav-item"><a class="nav-link" href="/quote">Calendar</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/urgent">Bulldogbrain</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/list">List</a></li>  
+                    <li class="nav-item"><a class="nav-link" href="/calendar">Calendar</a></li>
                   </ul>
                   <ul class="navbar-nav ms-auto mt-2">
                       <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
                   </ul>
               {% else %}
                   <ul class="navbar-nav ms-auto mt-2">
-                      <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/homepage">Bulldogbrain</a></li>  
+                    <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
                       <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
                   </ul>
               {% endif %}
