--- a/bulldogbrain/templates/layout.html
+++ b/bulldogbrain/templates/layout.html
@@ -51,32 +51,13 @@
 
     <div>
         {% if session["user_id"] %}
-        <button class="open-button" onclick="openForm()">Add+</button>
-
-        <div class="form-popup" id="myForm">
-          <form action="/action_page.php" class="form-container">
-            <h1>Login</h1>
-        
-            <label for="email"><b>Email</b></label>
-            <input type="text" placeholder="Enter Email" name="email" required>
-        
-            <label for="psw"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="psw" required>
-        
-            <button type="submit" class="btn">Login</button>
-            <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
-          </form>
+        <div class="dropdown">
+          <button class="dropbtn">Add+</button>
+          <div class="dropdown-content">
+            <a href="/assignmentsform">Assignment</a>
+            <a href="/eventsform">Event</a>
+          </div>
         </div>
-        
-        <script>
-        function openForm() {
-          document.getElementById("myForm").style.display = "block";
-        }
-        
-        function closeForm() {
-          document.getElementById("myForm").style.display = "none";
-        }
-        </script> 
         {% endif %}
     </div>
 
