--- a/bulldogbrain/templates/eventsform.html
+++ b/bulldogbrain/templates/eventsform.html
@@ -5,7 +5,38 @@
 {% endblock %}
 
 {% block main %}
-    <h1>Add Event</h1>
-
-
+<form action="/eventsform" method="post">
+    <div class="mb-3">
+        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="title" name="title" placeholder="Name of Event" type="text" required>
+    </div>
+    <div class="mb-3">
+        <input autocomplete="off" class="form-control mx-auto w-auto" id="location" name="location" placeholder="Location" type="text" required>
+    </div>
+    <div class="mb-3">
+        <p>Is this event important?</p>
+        <input type="radio" id="importance" name="importance" value="YES">
+        <label for="yes">YES</label><br>
+        <input type="radio" id="importance" name="importance" value="NO">
+        <label for="no">NO</label><br>
+    </div>
+    <div class="mb-3">
+        <input autocomplete="off" class="form-control mx-auto w-auto" id="day" name="day" placeholder="Month" type="number" required min="1" max="12">
+    </div>
+    <div class="mb-3">
+        <input autocomplete="off" class="form-control mx-auto w-auto" id="year" name="year" placeholder="Day" type="number" required min="1" max="12">
+    </div>
+    <div class="mb-3">
+        <input autocomplete="off" class="form-control mx-auto w-auto" id="hour" name="hour" placeholder="Year" type="number" required min="1" max="2022">
+    </div>
+    <div class="mb-3">
+        <input autocomplete="off" class="form-control mx-auto w-auto" id="minute" name="minute" placeholder="Hour" type="number" required max="24">
+    </div>
+    <div class="mb-3">
+        <input autocomplete="off" class="form-control mx-auto w-auto" id="minute" name="minute" placeholder="Minute" type="number" required max="59">
+    </div>
+    <div class="mb-3">
+        <input class="form-control mx-auto w-auto" id="notes" name="notes" placeholder="Notes" type="Text">
+    </div>
+    <button class="btn btn-primary" type="submit">Add Assignment</button>
+</form>
 {% endblock %}
