--- a/bulldogbrain/templates/assignmentsform.html
+++ b/bulldogbrain/templates/assignmentsform.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <form action="/addAssignment" method="post">
+    <form action="/assignmentsform" method="post">
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="title" name="title" placeholder="Name of Assignment" type="text" required>
         </div>
@@ -13,22 +13,22 @@
             <input autocomplete="off" class="form-control mx-auto w-auto" id="course" name="course" placeholder="Assignment course" type="text" required>
         </div>
         <div class="mb-3">
-            <input autocomplete="off" class="form-control mx-auto w-auto" id="month" name="month" placeholder="Month due" type="integer" maxlength="12">
+            <input autocomplete="off" class="form-control mx-auto w-auto" id="month" name="month" placeholder="Month due" type="number" min="1" max="12">
         </div>
         <div class="mb-3">
-            <input autocomplete="off" class="form-control mx-auto w-auto" id="day" name="day" placeholder="Day due" type="integer" required maxlength="31">
+            <input autocomplete="off" class="form-control mx-auto w-auto" id="day" name="day" placeholder="Day due" type="number" required min="1" max="31">
         </div>
         <div class="mb-3">
-            <input autocomplete="off" class="form-control mx-auto w-auto" id="year" name="year" placeholder="Year due" type="integer" required>
+            <input autocomplete="off" class="form-control mx-auto w-auto" id="year" name="year" placeholder="Year" type="number" required min="2022">
         </div>
         <div class="mb-3">
-            <input autocomplete="off" class="form-control mx-auto w-auto" id="hour" name="hour" placeholder="Hour due" type="integer" required>
+            <input autocomplete="off" class="form-control mx-auto w-auto" id="hour" name="hour" placeholder="Hour due" type="number" required min="1" max="24">
         </div>
         <div class="mb-3">
-            <input autocomplete="off" class="form-control mx-auto w-auto" id="minute" name="minute" placeholder="Minute due" type="integer" required maxlength="59">
+            <input autocomplete="off" class="form-control mx-auto w-auto" id="minute" name="minute" placeholder="Minute due" type="number" required min="1" max="59">
         </div>
         <div class="mb-3">
-            <input autocomplete="off" class="form-control mx-auto w-auto" id="rank" name="rank" placeholder="Importance of Assignment (1-3)" type="integer" minlength="1" maxlength="3">
+            <input autocomplete="off" class="form-control mx-auto w-auto" id="rank" name="rank" placeholder="Importance of Assignment (1-3)" type="number" min="1" max="3">
         </div>
         <div class="mb-3">
             <input class="form-control mx-auto w-auto" id="notes" name="notes" placeholder="Notes" type="Text">
