--- a/bulldogbrain/templates/assignmentsform.html
+++ b/bulldogbrain/templates/assignmentsform.html
@@ -12,23 +12,12 @@
         <div class="mb-3">
             <input autocomplete="off" class="form-control mx-auto w-auto" id="course" name="course" placeholder="Assignment course" type="text" required>
         </div>
-        <div class="mb-3">
-            <input autocomplete="off" class="form-control mx-auto w-auto" id="month" name="month" placeholder="Month due" type="number" min="1" max="12">
+        <div>
+            <label>Deadline:</label>
+            <input autocomplete="off" class="form-control mx-auto w-auto" id="deadline" name="deadline" type="datetime-local" required>
         </div>
         <div class="mb-3">
-            <input autocomplete="off" class="form-control mx-auto w-auto" id="day" name="day" placeholder="Day due" type="number" required min="1" max="31">
-        </div>
-        <div class="mb-3">
-            <input autocomplete="off" class="form-control mx-auto w-auto" id="year" name="year" placeholder="Year" type="number" required min="2022">
-        </div>
-        <div class="mb-3">
-            <input autocomplete="off" class="form-control mx-auto w-auto" id="hour" name="hour" placeholder="Hour due" type="number" required min="1" max="24">
-        </div>
-        <div class="mb-3">
-            <input autocomplete="off" class="form-control mx-auto w-auto" id="minute" name="minute" placeholder="Minute due" type="number" required min="1" max="59">
-        </div>
-        <div class="mb-3">
-            <input autocomplete="off" class="form-control mx-auto w-auto" id="rank" name="rank" placeholder="Importance of Assignment (1-3)" type="number" min="1" max="3">
+            <input autocomplete="off" class="form-control mx-auto w-auto" id="importance" name="importance" placeholder="Importance of Assignment (1-3)" type="number" min="1" max="3">
         </div>
         <div class="mb-3">
             <input class="form-control mx-auto w-auto" id="notes" name="notes" placeholder="Notes" type="Text">
