--- a/bulldogbrain/static/styles.css
+++ b/bulldogbrain/static/styles.css
@@ -148,3 +148,16 @@ th, td {
 tr:nth-child(even) {
   background-color: #f2f2f2;
 }
+
+html, body, {
+  position:fixed;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+}
+
+#body {
+  width: 100%;
+  height: 100%;
+  }
