broken id display

--- a/bulldogbrain/templates/login.html
+++ b/bulldogbrain/templates/login.html
@@ -12,6 +12,10 @@
         <div class="mb-3">
             <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
         </div>
-        <button class="btn btn-primary" type="submit">Log In</button>
+        <button class="btn btn-primary button button1" type="submit">Log In</button>
     </form>
+    <div>
+        
+    </div>
+    <img src="https://d3mojdi32uv7q.cloudfront.net/images/2021/8/18/HD19yalebowl.jpg" alt="Handsome Dan as a Puppy">
 {% endblock %}
