--- a/bulldogbrain/static/styles.css
+++ b/bulldogbrain/static/styles.css
@@ -158,6 +158,31 @@ html, body, {
 }
 
 #body {
-  width: 100%;
-  height: 100%;
+  width: 50%;
+  height: 50%;
   }
+
+.button {
+  background-color: #0000FF;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+  
+.button1 {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #0000FF;
+}
+  
+.button1:hover {
+  background-color: #0000FF;
+  color: white;
+}
