--- a/bulldogbrain/templates/layout.html
+++ b/bulldogbrain/templates/layout.html
@@ -32,7 +32,7 @@
                   <ul class="navbar-nav me-auto mt-2">
                     <li class="nav-item"><a class="nav-link" href="/urgent">Bulldogbrain</a></li>
                     <li class="nav-item"><a class="nav-link" href="/list">List</a></li>  
-                    <li class="nav-item"><a class="nav-link" href="/archive">Calendar</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/archive">Archive</a></li>
                   </ul>
                   <ul class="navbar-nav ms-auto mt-2">
                       <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
