--- a/bulldogbrain/templates/list.html
+++ b/bulldogbrain/templates/list.html
@@ -5,18 +5,17 @@
 {% endblock %}
 
 {% block main %}
-<h1>List view of events and assignments</h1>
 <div class="row">
 <div class="column">
-    <h2>Assignments</h2>
-        <table class="table table-striped">
+    <h2 style = "position:relative;top:-90px">Assignments</h2>
+        <table style = "position:relative;top:-90px" class="table table-striped">
             <thead>
                 <tr>
-                    <th>Completed<th>
+                    <th>#</th>
                     <th>Assignment</th>
                     <th>Course</th>
                     <th>Deadline</th>
-                    <th>Importance</th>
+                    <th>Important</th>
                     <th>Notes</th>
                 </tr>
             </thead>
@@ -24,14 +23,7 @@
                 <!-- TODO: Loop through the database entries to display them in this table -->
                 {% for assignments in assignments %}
                 <tr>
-                    <td>
-                        <!-- <input type="radio" id="completed" name="completed" value="1">
-                        <label for="yes">YES</label><br>
-                        <input type="radio" id="completed" name="completed" value="0">
-                        <label for="no">NO</label><br> -->
-                        <input type="checkbox" id="completed" name="completed" value="1">
-                        <label for="completed"></label><br>
-                    </td>
+                    <td>{{ assignments.id }}</td>
                     <td>{{ assignments.title }}</td>
                     <td>{{ assignments.course }}</td>
                     <td>{{ assignments.date }} @ {{ assignments.time }}</td>
@@ -43,16 +35,16 @@
         </table>
     </div>
     <div class="column">
-        <h2>Events</h2>
-        <table class="table table-striped">
+        <h2 style = "position:relative;top:-90px">Events</h2>
+        <table style = "position:relative;top:-90px" class="table table-striped">
             <thead>
                 <tr>
-                    <th>Completed</th>
+                    <th>#</th>
                     <th>Event</th>
                     <th>Start</th>
                     <th>End</th>
                     <th>Location</th>
-                    <th>Importance</th>
+                    <th>Important</th>
                     <th>Notes</th>
                 </tr>
             </thead>
@@ -60,17 +52,10 @@
                 <!-- TODO: Loop through the database entries to display them in this table -->
                 {% for events in events %}
                 <tr>
-                    <td>
-                        <input type="radio" id="completed" name="completed" value="1">
-                        <label for="yes">YES</label><br>
-                        <input type="radio" id="completed" name="completed" value="0">
-                        <label for="no">NO</label><br>
-                        <!-- <input type="checkbox" id="completed" name="completed" value="">
-                        <label for="completed"></label><br> -->
-                    </td>
+                    <td>{{ events.event_id }}</td>
                     <td>{{ events.title }}</td>
-                    <td>{{ events.start_date }} {{ events.start_time }}</td>
-                    <td>{{ events.end_date }} {{ events.end_time }}</td>
+                    <td>{{ events.start_date }} @ {{ events.start_time }}</td>
+                    <td>{{ events.end_date }} @ {{ events.end_time }}</td>
                     <td>{{ events.location }}</td>
                     <td>{{ events.importance }}</td>
                     <td>{{ events.notes }}</td>    
