starting day view and cross out

--- a/bulldogbrain/templates/login.html
+++ b/bulldogbrain/templates/login.html
@@ -17,5 +17,5 @@
     <div>
         
     </div>
-    <img src="https://d3mojdi32uv7q.cloudfront.net/images/2021/8/18/HD19yalebowl.jpg" alt="Handsome Dan as a Puppy">
+    <img src="https://d3mojdi32uv7q.cloudfront.net/images/2021/8/18/HD19yalebowl.jpg" alt="Handsome Dan as a Puppy" style:"width:128px;height:128px;">
 {% endblock %}
