--- a/bulldogbrain/templates/list.html
+++ b/bulldogbrain/templates/list.html
@@ -5,9 +5,18 @@
 {% endblock %}
 
 {% block main %}
+<!-- <div>
+    <form action="/list" method="post">
+        <p>Insert assignment # to remove or cross off:</p>
+        
+        <input autocomplete="off" class="form-control mx-auto w-auto" id="assignment_id" name="assignment_id" placeholder="Assignment #" type="int" required>
+        <button class="btn btn-primary" type="submit">Cross off Assignment</button> -->
+        <!-- <button class="btn btn-primary" type="submit">Delete Assignment</button> -->
+    <!-- </form> -->
+</div>
 <div class="row">
 <div class="column">
-    <h2 style = "position:relative;top:-90px">Assignments</h2>
+    <h2 style = "position:relative;top:-90px">Assignments poop</h2>
         <table style = "position:relative;top:-90px" class="table table-striped">
             <thead>
                 <tr>
