starting cross out 2

--- a/bulldogbrain/templates/list.html
+++ b/bulldogbrain/templates/list.html
@@ -7,12 +7,12 @@
 {% block main %}
 <!-- <div>
     <form action="/list" method="post">
-        <p>Insert assignment # to remove or cross off:</p>
+        <p>Insert assignment or event # to remove or cross off:</p>
         
         <input autocomplete="off" class="form-control mx-auto w-auto" id="assignment_id" name="assignment_id" placeholder="Assignment #" type="int" required>
-        <button class="btn btn-primary" type="submit">Cross off Assignment</button> -->
-        <!-- <button class="btn btn-primary" type="submit">Delete Assignment</button> -->
-    <!-- </form> -->
+        <button class="btn btn-primary" type="submit">Cross off Assignment</button>
+        <button class="btn btn-primary" type="submit">Delete Assignment</button>
+    </form> -->
 </div>
 <div class="row">
 <div class="column">
