--- a/bulldogbrain/templates/archive.html
+++ b/bulldogbrain/templates/archive.html
@@ -5,14 +5,18 @@
 {% endblock %}
 
 {% block main %}
-<div>
-    <form action="/list" method="post">
-        <p>Insert assignment # to remove or cross off:</p>
-        <input autocomplete="off" class="form-control mx-auto w-auto" id="assignment_id" name="assignment_id" placeholder="Assignment #" type="int" required>
-        <button class="btn btn-primary" type="submit">Cross off Assignment</button>
-        <button class="btn btn-primary" type="submit">Delete Assignment</button>
-    </form>
-</div>
+<form action="/archive" method="post">
+    <p>Insert assignment or event # to restore:</p>
+    
+    <input autocomplete="off" class="form-control mx-auto w-auto" id="id" name="id" placeholder="#" type="int" required>
+    <input type="radio" id="assignment" name="type" value="assignment">
+        <label for="type">assignment</label>
+    <input type="radio" id="type" name="type" value="event">
+        <label for="type">event</label>
+    <button class="btn btn-primary" type="submit">Restore</button>
+</form>
+<br>
+
 <div class="row">
 <div class="column">
     <h2 style = "position:relative;top:-90px">Assignments</h2>
