--- a/bulldogbrain/templates/list.html
+++ b/bulldogbrain/templates/list.html
@@ -5,18 +5,41 @@
 {% endblock %}
 
 {% block main %}
-<!-- <div>
+<div>
     <form action="/list" method="post">
         <p>Insert assignment or event # to remove or cross off:</p>
         
-        <input autocomplete="off" class="form-control mx-auto w-auto" id="assignment_id" name="assignment_id" placeholder="Assignment #" type="int" required>
-        <button class="btn btn-primary" type="submit">Cross off Assignment</button>
-        <button class="btn btn-primary" type="submit">Delete Assignment</button>
-    </form> -->
+        <input autocomplete="off" class="form-control mx-auto w-auto" id="id" name="id" placeholder="#" type="int" required>
+        <input type="radio" id="assignment" name="type" value="assignment">
+        <label for="type">assignment</label>
+        <input type="radio" id="type" name="type" value="event">
+        <label for="type">event</label>
+        <button class="btn btn-primary" type="submit">Cross off</button>
+    </form>
+    <br>
+
+    <!-- THIS WORKS TOO!!!
+    <form action="/list" method="post">
+        <p>Insert assignment or event # to remove or cross off:</p>
+    
+        <input autocomplete="off" class="form-control mx-auto w-auto" id="id" name="id" placeholder="#" type="int" required>
+        <button class="btn btn-primary" name="type" type="submit" value="assignment">Cross off Assignment</button>
+        <button class="btn btn-primary" name="type" type="submit" value="event">Cross off Event</button>
+    </form>
+    <br> -->
+
+    <!-- <div>
+        <form action="/list" method="post">
+            <p>Insert assignment # to remove or cross off:</p>
+            <input autocomplete="off" class="form-control mx-auto w-auto" id="assignment_id" name="assignment_id" placeholder="Assignment #" type="int" required>
+            <button class="btn btn-primary" type="submit">Cross off Assignment</button>
+            <button class="btn btn-primary" type="submit">Delete Assignment</button>
+        </form>
+    </div> -->
 </div>
 <div class="row">
 <div class="column">
-    <h2 style = "position:relative;top:-90px">Assignments poop</h2>
+    <h2 style = "position:relative;top:-90px">Assignments</h2>
         <table style = "position:relative;top:-90px" class="table table-striped">
             <thead>
                 <tr>
