--- a/bulldogbrain/templates/archive.html
+++ b/bulldogbrain/templates/archive.html
@@ -5,14 +5,12 @@
 {% endblock %}
 
 {% block main %}
-<form action="/archive" method="post">
-    <p>Insert assignment or event # to restore:</p>
-    
-    <input autocomplete="off" class="form-control mx-auto w-auto" id="id" name="id" placeholder="#" type="int" required>
+<form action="/archive" method="post" class="position:relative;top:-90px">
+    <input autocomplete="off" class="form-control mx-auto w-auto" id="id" name="id" placeholder="#id" type="int" required>
     <input type="radio" id="assignment" name="type" value="assignment">
-        <label for="type">assignment</label>
+        <label for="type">Assignment</label>
     <input type="radio" id="type" name="type" value="event">
-        <label for="type">event</label>
+        <label for="type">Event</label>
     <button class="btn btn-primary" type="submit">Restore</button>
 </form>
 <br>
@@ -32,7 +30,6 @@
                 </tr>
             </thead>
             <tbody>
-                <!-- TODO: Loop through the database entries to display them in this table -->
                 {% for assignments in assignments %}
                 <tr>
                     <td>{{ assignments.id }}</td>
