--- a/bulldogbrain/static/styles.css
+++ b/bulldogbrain/static/styles.css
@@ -1,3 +1,5 @@
+
+
 {box-sizing: border-box;}
 
 /* The popup form - hidden by default */
@@ -72,9 +74,11 @@
 .dropbtn {
   background-color: #0000FF;
   color: white;
-  padding: 16px;
+  padding: 10px 18px;
   font-size: 16px;
   border: none;
+  border-radius: 25px;
+  margin-left: 10px;
 }
 
 /* The container <div> - needed to position the dropdown content */
