--- a/bulldogbrain/templates/layout.html
+++ b/bulldogbrain/templates/layout.html
@@ -30,17 +30,16 @@
           <div class="collapse navbar-collapse" id="navbar">
               {% if session["user_id"] %}
                   <ul class="navbar-nav me-auto mt-2">
-                    <li class="nav-item"><a class="nav-link" href="/urgent">BulldogBrain</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/urgent">Bulldogbrain</a></li>
                     <li class="nav-item"><a class="nav-link" href="/list">List</a></li>  
                     <li class="nav-item"><a class="nav-link" href="/archive">Archive</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/list_test">List_test</a></li>
                   </ul>
                   <ul class="navbar-nav ms-auto mt-2">
                       <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
                   </ul>
                   
               {% else %}
-                  <h1 class="textcenter">Bulldog Brain</h1>
+                  
                   <ul  class="navbar-nav ms-auto mt-2">
                     <li class="nav-item"><a class="nav-link" href="/homepage">BulldogBrain</a></li>  
                     <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
