--- a/bulldogbrain/static/styles.css
+++ b/bulldogbrain/static/styles.css
@@ -74,7 +74,7 @@
 .dropbtn {
   background-color: #0000FF;
   color: white;
-  padding: 10px 18px;
+  padding: 12px 18px;
   font-size: 16px;
   border: none;
   border-radius: 25px;
@@ -83,6 +83,9 @@
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
+  /* position: relative; top:-50px; left: -675px; */
+  margin: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
   position: relative;
   display: inline-block;
 }
@@ -100,7 +103,7 @@
 /* Links inside the dropdown */
 .dropdown-content a {
   color: black;
-  padding: 12px 16px;
+  padding: 12px 18px;
   text-decoration: none;
   display: block;
 }
@@ -191,17 +194,7 @@ html, body, {
   color: white;
 }
 
-.assignmentDeletion {
-  text-align: center;
-  display: inline-block;
-  text-align: left;
-}
-
 .loginbox {
   border: 2px solid #0000FF;
   border-radius: 4px;
-}
-
-.textcenter {
-  text-align: center;
 }
