--- a/bulldogbrain/templates/dayChronoligical.html
+++ b/bulldogbrain/templates/dayChronoligical.html
@@ -5,11 +5,11 @@
 {% endblock %}
 
 {% block main %}
-<h1>Today</h1>
+<strong style = "position: relative; top: -100px; font-size: 40px" >Today</strong>
     <div class="row">
     <div class="column">
-        <h2 style = "position:relative;top:-90px">Assignments</h2>
-            <table style = "position:relative;top:-90px" class="table table-striped">
+        <h2 style = "position:relative;top:-55px">Assignments</h2>
+            <table style = "position:relative;top:-55px" class="table table-striped">
                 <thead>
                     <tr>
                         <th></th>
@@ -49,8 +49,8 @@
             </table>
         </div>
         <div class="column">
-            <h2 style = "position:relative;top:-90px">Events</h2>
-            <table style = "position:relative;top:-90px" class="table table-striped">
+            <h2 style = "position:relative;top:-55px;">Events</h2>
+            <table style = "position:relative;top:-55px" class="table table-striped">
                 <thead>
                     <tr>
                         <th></th>
