--- a/bulldogbrain/templates/list.html
+++ b/bulldogbrain/templates/list.html
@@ -17,7 +17,6 @@
         <label for="type">event</label>
         <button class="btn btn-primary" type="submit">Cross off</button>
     </form> -->
-    <br>
 
     <!-- THIS WORKS TOO!!!
     <form action="/list" method="post">
@@ -38,10 +37,22 @@
         </form>
     </div> -->
 </div>
+<!-- <div>
+    {% if session["user_id"] %}
+    <div class="dropdown">
+        <button class="dropbtn">Add+</button>
+        <div class="dropdown-content">
+          <a href="/assignmentsform">Assignment</a>
+          <a href="/eventsform">Event</a>
+        </div>
+      </div>
+
+    {% endif %}
+</div> -->
 <div class="row">
 <div class="column">
-    <h2 style = "position:relative;top:-90px">Assignments</h2>
-        <table style = "position:relative;top:-90px" class="table table-striped">
+    <h2 style = "position:relative; top:-55px">Assignments</h2>
+        <table style = "position:relative; top:-55px" class="table table-striped">
             <thead>
                 <tr>
                     <th></th>
@@ -84,8 +95,8 @@
         </table>
     </div>
     <div class="column">
-        <h2 style = "position:relative;top:-90px">Events</h2>
-        <table style = "position:relative;top:-90px" class="table table-striped">
+        <h2 style = "position:relative; top:-55px">Events</h2>
+        <table style = "position:relative; top:-55px" class="table table-striped">
             <thead>
                 <tr>
                     <th></th>
