--- a/bulldogbrain/templates/dayChronoligical.html
+++ b/bulldogbrain/templates/dayChronoligical.html
@@ -5,14 +5,14 @@
 {% endblock %}
 
 {% block main %}
-<strong style = "position: relative; top: -100px; font-size: 40px" >Today</strong>
+<strong style = "position: relative; top: -110px; font-size: 45px" >Today</strong>
     <div class="row">
     <div class="column">
-        <h2 style = "position:relative;top:-55px">Assignments</h2>
-            <table style = "position:relative;top:-55px" class="table table-striped">
+        <strong style = "position:relative; top:-130px; font-size: 40px">Assignments</strong>
+            <table style = "position:relative; top:-130px" class="table table-striped">
                 <thead>
                     <tr>
-                        <th></th>
+                        <th><img src="static/images/checkMark.png" alt="Checkmark" width="20" height="20"></th>
                         <th>Assignment</th>
                         <th>Course</th>
                         <th>Deadline</th>
@@ -49,11 +49,11 @@
             </table>
         </div>
         <div class="column">
-            <h2 style = "position:relative;top:-55px;">Events</h2>
-            <table style = "position:relative;top:-55px" class="table table-striped">
+            <strong style = "position:relative; top:-130px; font-size: 40px">Events</strong>
+            <table style = "position:relative; top:-130px" class="table table-striped">
                 <thead>
                     <tr>
-                        <th></th>
+                        <th><img src="static/images/checkMark.png" alt="Checkmark" width="20" height="20"></th>
                         <th>Event</th>
                         <th>Start</th>
                         <th>End</th>
