login title, finished courses form

--- a/bulldogbrain/templates/login.html
+++ b/bulldogbrain/templates/login.html
@@ -6,6 +6,7 @@
 
 {% block main %}
 <head>
+    <strong style="position:relative; top:-100px" class="center title">BULLDOG BRAIN</strong>
     <style>
     body  {
         background-image: url("https://forhumanity.yale.edu/sites/default/files/styles/post_hero/public/2021/images/Yale_Yburst_hero.jpg?h=c33ae526&itok=VW5aTcP6");
