--- a/bulldogbrain/templates/layout.html
+++ b/bulldogbrain/templates/layout.html
@@ -39,8 +39,7 @@
                   </ul>
                   
               {% else %}
-                  
-                  <ul  class="navbar-nav ms-auto mt-2">
+                  <ul class="navbar-nav ms-auto mt-2">
                     <li class="nav-item"><a class="nav-link" href="/homepage">BulldogBrain</a></li>  
                     <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
                     <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
@@ -57,7 +56,7 @@
             <div class="dropdown-content">
               <a href="/assignmentsform">Assignment</a>
               <a href="/eventsform">Event</a>
-              <a href="/makingClasses">Class</a>
+              <a href="/makingClasses">Courses</a>
             </div>
           </div>
 
