added TO-DO list

--- a/bulldogbrain/templates/layout.html
+++ b/bulldogbrain/templates/layout.html
@@ -40,7 +40,9 @@
                   
               {% else %}
                   <ul class="navbar-nav ms-auto mt-2">
-                    <li class="nav-item"><a class="nav-link" href="/homepage">BulldogBrain</a></li>  
+                    <!-- This will only be done if we want a page that explains what the website does, but it might
+                    not be necessary, as our page is already self-explanatory. -->
+                    <!-- <li class="nav-item"><a class="nav-link" href="/homepage">BulldogBrain</a></li>-->
                     <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
                     <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
                   </ul>
