--- a/bulldogbrain/templates/makingClasses.html
+++ b/bulldogbrain/templates/makingClasses.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block main %}
-    <form action="/assignmentsform" method="post">
-        <strong style="font-size:55px;position:relative;top:-90px">ADD COURSE</strong>
+    <form action="/makingClasses" method="post">
+        <strong style="font-size:55px;position:relative;top:-40px">ADD COURSE</strong>
         <br>
         <div class="mb-3">
             <input style="height:60px;width:300px;font-size:25px;" autocomplete="off" autofocus class="form-control mx-auto w-auto" id="title" name="title" placeholder="Name of Class" type="text" required>
