--- a/bulldogbrain/templates/assignmentsform.html
+++ b/bulldogbrain/templates/assignmentsform.html
@@ -9,16 +9,29 @@
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="title" name="title" placeholder="Name of Assignment" type="text" required>
         </div>
+
+        <strong>Course</strong>
+        <div>
+        <select name="languages" id="languages">
+            {% for courseTitle in courseTitle %}
+                <option value="{{ courseTitle.title }}">{{ courseTitle.title }}</option>
+            {% endfor %}
+        </select>
+        </div>
+        <br>
+
         <div class="mb-3">
             <input autocomplete="off" class="form-control mx-auto w-auto" id="course" name="course" placeholder="Assignment course" type="text" required>
         </div>
         <div>
-            <label>Deadline:</label>
+            <strong>Deadline</strong >
             <input autocomplete="off" class="form-control mx-auto w-auto" id="deadline" name="deadline" type="datetime-local" required>
         </div>
+        <br>
         <div class="mb-3">
-            <input autocomplete="off" class="form-control mx-auto w-auto" id="importance" name="importance" placeholder="Importance of Assignment (1-3)" type="number" min="1" max="3">
+            <input autocomplete="off" class="form-control mx-auto w-auto" id="importance" name="importance" placeholder="Importance" type="integer" min="1" max="3">
         </div>
+        
         <div class="mb-3">
             <input class="form-control mx-auto w-auto" id="notes" name="notes" placeholder="Notes" type="Text">
         </div>
